# contour2reg

./: .gitignore  DeformedSampleState.pvsm  README.md  requirement.txt
Generate/: blender_generate.py  config.py  const.py  data.py  data_generate.py  generate.py  generateRandomMesh.py  generate_data.sh  patient_specific_data_generate.py  preprocessData.py  pyvista_contour.py  randomMesh.geo  util.py  volume2contour.py
Model/: config.py  const.py  data.py  preprocessData.py  util.py
Tools/Source/: CMakeLists.txt
Tools/Source/simulationGen/Source/: CMakeLists.txt  simulationGen.cpp
Tools/Source/voxelize/Source/: CMakeLists.txt  voxelize.cpp
Tools/Source/vtk2elmer/Source/: CMakeLists.txt  vtk2elmer.cpp  writeElmerFiles.cpp  writeElmerFiles.h
